--- a/apps/nginx-app/Chart.yaml
+++ b/apps/nginx-app/Chart.yaml
@@ -5,5 +5,5 @@ type: application
 version: 0.1.0
 dependencies:
   - name: nginx
-    repository: https://charts.bitnami.com/bitnami
+    repository: oci://registry-1.docker.io/bitnamicharts
     version: 17.0.1
