--- a/root/appset.yaml
+++ b/root/appset.yaml
@@ -44,5 +44,8 @@ spec:
         server: '{{.url}}'
         namespace: '{{.path.basename}}-{{.cluster}}'
       syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
         syncOptions:
         - CreateNamespace=true
