--- a/apps/nginx-app/values.yaml
+++ b/apps/nginx-app/values.yaml
@@ -3,4 +3,4 @@ cloneStaticSiteFromGit:
   repository: https://github.com/mdn/beginner-html-site-styled.git
   branch: master
 
-replicaCount: [{ env "nginx_replicas" }]
+replicaCount: 3
