feat: add toggle for demo app

--- a/apps/nginx-app/values.yaml
+++ b/apps/nginx-app/values.yaml
@@ -1,7 +1,9 @@
 nginx:
   cloneStaticSiteFromGit:
+[{- if env "demo_app_enabled" }]
     enabled: true
     repository: https://github.com/mdn/beginner-html-site-styled.git
     branch: master
+[{- end }]
 
   replicaCount: [{ env "nginx_replicas" }]
