fix: change project to demo

--- a/root/appset.yaml
+++ b/root/appset.yaml
@@ -26,7 +26,7 @@ spec:
     metadata:
       name: '{{.path.basename}}-{{.cluster}}'
     spec:
-      project: "default"
+      project: "demo"
       source:
         repoURL: https://github.com/graytonio/flagops-argocd-example.git
         targetRevision: HEAD
